# Esercitazione1_prog

./: README.md  nomefile.txt
esercitazione1/: CMakeLists.txt  medie_temperature.cpp  param.cpp
esercitazione2/: CMakeLists.txt  algoritmo.cpp  bubblesort.cpp  esempio.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  randfiller.hpp  sort.hpp  test_bubblesort.cpp  test_selectionsort.cpp
esercitazione4/grafico/: plot_sorts.py
esercitazione5/: CMakeLists.txt  confronto.cpp  confronto_merge_selection.cpp  considerazioni.txt  measure_sorts.cpp  sort.hpp  test_insertionsort.cpp  test_mergesort.cpp  test_opt_quicksort.cpp  test_quicksort.cpp
esercitazione5/debug_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  confronto  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_opt_quicksort  test_quicksort  test_selectionsort
esercitazione5/debug_build/Testing/Temporary/: CTestCostData.txt
esercitazione5/production_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  confronto  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_opt_quicksort  test_quicksort  test_selectionsort
